--- a/src/global.scss
+++ b/src/global.scss
@@ -15,6 +15,10 @@ $grey: #424242;
     -moz-osx-font-smoothing: grayscale;
   }
 
+body, html {
+  height: 100%;
+}
+
 body {
   background-color: $dark-orange!important;
 }
